<resources>
    <string name="app_name">BenchApp</string>
    <string name="app_title">Benchmark APP</string>

    <!--BUTTON TEXT-->
    <string name="btn_cpu">CPU</string>
    <string name="btn_wifi">Wi-Fi</string>
    <string name="btn_3g">3G</string>
    <string name="btn_screen">Display</string>
    <string name="btn_gps">GPS</string>
    <string name="btn_audio">AUDIO</string>
    <string name="btn_sort">SORT</string>
    <string name="txt_subt">Press on buttons to start benchmark</string>

    <string name="title_activity_lcd">LcdActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="menu_settings_title">Settings</string>
    <string name="title_activity_main">BenchApp</string>


    <!--DEFAULT SETTINGS-->
    <string name="default_cpu_state_duration">5</string>

    <string name="default_wifi_ip_address">192.168.1.20</string>
    <string name="default_wifi_port">29000</string>
    <string name="default_wifi_start_rate">5</string>
    <string name="default_wifi_end_rate">20</string>
    <string name="default_wifi_ms_per_rate">5000</string>
    <string name="default_wifi_payload_size">256</string>

    <string name="default_threeG_ip_address">127.0.0.1</string>
    <string name="default_threeG_port">8080</string>
    <string name="default_threeG_start_rate">5</string>
    <string name="default_threeG_end_rate">10</string>
    <string name="default_threeG_ms_per_rate">5000</string>
    <string name="default_threeG_payload_size">256</string>

    <string name="default_lcd_step_duration">2000</string>
    <string name="default_lcd_step_increment">5</string>

    <string name="default_gps_request_timeout">30</string>
    <string name="default_gps_requests_number">4</string>

    <string name="default_audio_play_duration">5</string>
    <string name="default_audio_pause_duration">2</string>

    <string name="default_general_marker_duration_high">500</string>
    <string name="default_general_marker_duration_low">500</string>
    <string name="title_activity_settings2">Settings2</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_sort_test">SortTest</string>

    <!-- Strings related to Settings -->

    <!--&lt;!&ndash; Example General settings &ndash;&gt;-->
    <!--<string name="pref_header_general">General</string>-->
    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>-->
    <!--<string name="pref_description_social_recommendations">Recommendations for people to contact-->
    <!--based on your message history-->
    <!--</string>-->

    <!--<string name="pref_title_display_name">Display name</string>-->
    <!--<string name="pref_default_display_name">John Smith</string>-->

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
    <!--<item>Always</item>-->
    <!--<item>When possible</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
    <!--<item>1</item>-->
    <!--<item>0</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; Example settings for Data & Sync &ndash;&gt;-->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>-->

    <!--<string name="pref_title_sync_frequency">Sync frequency</string>-->
    <!--<string-array name="pref_sync_frequency_titles">-->
    <!--<item>15 minutes</item>-->
    <!--<item>30 minutes</item>-->
    <!--<item>1 hour</item>-->
    <!--<item>3 hours</item>-->
    <!--<item>6 hours</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_sync_frequency_values">-->
    <!--<item>15</item>-->
    <!--<item>30</item>-->
    <!--<item>60</item>-->
    <!--<item>180</item>-->
    <!--<item>360</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!--&lt;!&ndash; Example settings for Notifications &ndash;&gt;-->
    <!--<string name="pref_header_notifications">Notifications</string>-->

    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->

    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <!--<string name="pref_ringtone_silent">Silent</string>-->

    <!--<string name="pref_title_vibrate">Vibrate</string>-->

</resources>
