<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="fabiogentile.benchapp.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_memory_black_24dp"
        android:title="@string/btn_cpu" />

    <header
        android:fragment="fabiogentile.benchapp.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_wifi_black_24dp"
        android:title="@string/btn_wifi" />

    <header
        android:fragment="fabiogentile.benchapp.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sim_card_black_24dp"
        android:title="@string/btn_3g" />

    <header
        android:fragment="fabiogentile.benchapp.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_phone_android_black_24dp"
        android:title="@string/btn_screen" />

    <header
        android:fragment="fabiogentile.benchapp.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/btn_gps" />

    <header
        android:fragment="fabiogentile.benchapp.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/btn_audio" />


</preference-headers>
