<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:BenchApp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:BenchApp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="fabiogentile.benchapp.BenchMain">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#CCCCCC"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        BenchApp:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_subt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_subt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/btn_cpu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_cpu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <Button
        android:id="@+id/btn_wifi"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_wifi" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <Button
        android:id="@+id/btn_3g"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_3g" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <Button
        android:id="@+id/btn_lcd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_screen" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <Button
        android:id="@+id/btn_gps"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_gps" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <Button
            android:id="@+id/btn_audio"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_audio" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <Button
            android:id="@+id/btn_sort"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_sort" />

    </LinearLayout>

</ScrollView>