<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/default_wifi_ip_address"
        android:inputType="text"
        android:key="wifi_ip_address"
        android:selectAllOnFocus="true"
        android:summary="@string/default_wifi_ip_address"
        android:title="Server IP address" />

    <EditTextPreference
        android:defaultValue="@string/default_wifi_port"
        android:inputType="number"
        android:key="wifi_server_port"
        android:selectAllOnFocus="true"
        android:summary="@string/default_wifi_port"
        android:title="Server Port" />

    <EditTextPreference
        android:defaultValue="@string/default_wifi_start_rate"
        android:inputType="number"
        android:key="wifi_start_rate"
        android:selectAllOnFocus="true"
        android:summary="@string/default_wifi_start_rate"
        android:title="Start packet rate (pkt/s)" />

    <EditTextPreference
        android:defaultValue="@string/default_wifi_end_rate"
        android:inputType="number"
        android:key="wifi_end_rate"
        android:selectAllOnFocus="true"
        android:summary="@string/default_wifi_end_rate"
        android:title="End packet rate (pkt/s)" />

    <EditTextPreference
        android:defaultValue="@string/default_wifi_packet_per_rate"
        android:inputType="number"
        android:key="wifi_packet_per_rate"
        android:selectAllOnFocus="true"
        android:summary="@string/default_wifi_packet_per_rate"
        android:title="Number of packet per rate" />

    <EditTextPreference
        android:defaultValue="@string/default_wifi_payload_size"
        android:inputType="number"
        android:key="wifi_payload_size"
        android:selectAllOnFocus="true"
        android:summary="@string/default_wifi_payload_size"
        android:title="payload size (bytes)" />

</PreferenceScreen>
